--- a/lab6_css_framework.html
+++ b/lab6_css_framework.html
@@ -13,16 +13,6 @@
 </head>
 
 <body>
-    <!-- Container -->
-    <div class="container">
-
-    </div>
-    <!-- Container -->
-    <div class="container shadow-lg">
-        <div class="card-body">
-            <h1 class="text-muted py-3">Layout Sederhana</h1>
-        </div>
-    </div>
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
@@ -33,6 +23,143 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
     -->
+    <!-- Container -->
+    <div class="container shadow-lg">
+        <div class="card-body">
+            <h1 class="text-muted py-3">Layout Sederhana</h1>
+            <nav class="navbar" style="background-color: #1f5faa;">
+                <ul class="nav nav-pills">
+                    <li class="nav-item">
+                        <a class="nav-link active text-light" aria-current="page" href="#">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-light" href="#">Article</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-light" href="#">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-light" href="#">Contact</a>
+                    </li>
+                </ul>
+            </nav>
+            <div class="card" style="width: 80,1rem; padding: 50px 20px; background-color: #e4e4e5; border-radius: 0;">
+                <div class="card-body">
+                    <h1 class="card-title pb-4" style="font-weight: bold;">Hello World!</h1>
+                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem saepe necessitatibus aspernatur nisi autem delectus excepturi nostrum natus similique beatae reiciendis, quos placeat sapiente qui sint voluptatibus, a temporibus
+                        quasi.
+                    </p>
+                    <a href="#" class="btn btn-primary">Learn More »</a>
+                </div>
+            </div>
+            <!-- Row Content 1 -->
+            <div class="row">
+                <!-- card 1 -->
+                <div class="col-3">
+                    <div class="col mt-4">
+                        <div class="card" style="width: 18rem; border: 0;">
+                            <img src="https://dummyimage.com/120/db7d25/fff.png" class="card-img-top rounded-circle" alt="Indira" style="width: 200px;">
+                            <div class="card-body">
+                                <h5 class="card-title">Heading</h5>
+                                <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptates, facere.
+                                </p>
+                                <a href="#" class="btn btn-primary">View detail</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- card 2 -->
+                <div class="col-3">
+                    <div class="col mt-4">
+                        <div class="card" style="width: 18rem; border: 0;">
+                            <img src="https://dummyimage.com/120/3e73e6/fff.png" class="card-img-top rounded-circle" alt="Indira" style="width: 200px;">
+                            <div class="card-body">
+                                <h5 class="card-title">Heading</h5>
+                                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, magnam?
+                                </p>
+                                <a href="#" class="btn btn-primary">View detail</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- card 3 -->
+                <div class="col-3">
+                    <div class="col mt-4">
+                        <div class="card" style="width: 18rem; border: 0;">
+                            <img src="https://dummyimage.com/120/71e6d4/fff.png" class="card-img-top rounded-circle" alt="Muhammad Rifai Aditiya" style="width: 200px;">
+                            <div class="card-body">
+                                <h5 class="card-title">Heading</h5>
+                                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, neque.
+                                </p>
+                                <a href="#" class="btn btn-primary">View detail</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- Widget Header -->
+                <div class="col-3">
+                    <div class="list-group my-4" style="border-radius: 0;">
+                        <a href="#" class="list-group-item list-group-item-action active" aria-current="true" style="font-weight: bold;">
+            Widget Header
+        </a>
+                        <a href="#" class="list-group-item list-group-item-action">Widget Link</a>
+                        <a href="#" class="list-group-item list-group-item-action">Widget Link</a>
+                        <a href="#" class="list-group-item list-group-item-action">Widget Link</a>
+                        <a href="#" class="list-group-item list-group-item-action">Widget Link</a>
+                        <a href="#" class="list-group-item list-group-item-action">Widget Link</a>
+                    </div>
+                    <!-- Widget Text -->
+                    <div class="list-group my-4" style="border-radius: 0; border: 1px #eee;">
+                        <a href="#" class="list-group-item list-group-item-action active " aria-current="true" style="font-weight: bold;">
+        Widget Text
+    </a>
+                        <a href="#" class="list-group-item list-group-item-action">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam quas natus, amet ab voluptatibus beatae accusamus, quam hic veritatis ipsa, accusantium est nihil dolores minus at labore sapiente autem vero.</p>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <!-- Row Content 2 -->
+            <div>
+                <!--Section 1-->
+                <div class="mb-5" style="width: 900px; border: 0;">
+                    <h2>First featurette heading.</h2>
+                    <div class="row no-gutters">
+                        <div class="col-md-3">
+                            <img src="https://dummyimage.com/150/7b8a70/fff.png" class="card-img-top rounded-square" style="width: 200px;" alt="...">
+                        </div>
+                        <div class="col-md-8">
+                            <div class="card-body">
+                                <p class="card-text lead p-3 fs-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum lorem elit, iaculis in nisl volutpat, malesuada tincidunt arcu. Proin in leo fringilla, vestibulum mi porta, faucibus felis. Integer pharetra est nunc,
+                                    nec pretium nunc pretium ac.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- Row Content 3 -->
+                <!--Section 2-->
+                <div class="mt-5 mb-5" style="width: 900px; border: 0;">
+                    <h2>First featurette heading.</h2>
+                    <div class="row">
+                        <div class="col-md-8">
+                            <div class="card-body">
+                                <p class="lead p-3 fs-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum lorem elit, iaculis in nisl volutpat, malesuada tincidunt arcu. Proin in leo fringilla, vestibulum mi porta, faucibus felis. Integer pharetra est nunc,
+                                    nec pretium nunc pretium ac.</p>
+                            </div>
+                        </div>
+                        <div class="col-md-3">
+                            <img src="https://dummyimage.com/150/7b8a70/fff.png" class="card-img-top rounded-square" style="width: 200px;" alt="...">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!--Footer Start-->
+            <div class="card-footer text-start bg-dark text-light p-2">
+                <p>&copy; 2021 - Universitas Pelita Bangsa</p>
+            </div>
+            <!--Footer End-->
+        </div>
+    </div>
 </body>
 
 </html>
